[MD settings] show icon when content settings are controlled by an extension

This CL adds an policy/controlledBy icon to content settings when that
setting is controlled by an extension. It also disables the toggle
control for that content setting.

BUG=693301
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2708013003
Cr-Commit-Position: refs/heads/master@{#454756}

Former-commit-id: 2e192df5bae608faf8e02c2a26fc26e40552f2f8